Apply color contrast fix .unit-dims - Move root colors to child theme - Generate new build

--- a/blocks/rental.scss
+++ b/blocks/rental.scss
@@ -1,30 +1,7 @@
 @use "sass:map";
 @use "sass:color";
 
-:root {
-	--bfl-primary: #c20430;
-	--bfl-primary-hover: #970225;
-	--bfl-text: #191919;
-	--bfl-accent: #49cbff;
-	--bfl-basic-white: #fff;
-	--bfl-blue-tint: #5f98b6;
-	--bfl-maize-tint: #b49056;
-	--bfl-lavendar-tint: #7a5fab;
-	--bfl-sage-tint: #7a5fab;
-	--bfl-pink-tint: #9f5879;
-	--bfl-sidewalk-tint: #818181;
-	--bfl-rose-tint: #913131;
-
-	--bfl-glare: #f1f1f1ff;
-	--bfl-plaster: #d3d3d3ff;
-	--bfl-dried-leaves: #674a2a;
-	--bfl-concrete-tint: #7d7d7d;
-	--bfl-ivory-tint: #fffff0ff;
-	--bfl-primary-highlite: #ffebebff;
-	--bfl-hazy-tint: #ffebebff;
-	--bfl-grass-tint: #a6eca6;
-}
-
+// find custom property CSS colors in child theme styles.css file
 .visually-hidden {
 	border: 0;
 	clip: rect(0 0 0 0);
@@ -302,6 +279,10 @@
 	.range {
 		color: var(--bfl-concrete-tint);
 	}
+}
+
+.unit-dims {
+	color: var(--bfl-concrete-tint);
 }
 
 .unit-extras {
